...
            "state" : "translated",
            "value" : "Sous la plage"
          }
        }
      }
    },
    "CHANGED TO FIT THE APP" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "AJUSTÉ POUR L'APP"
          }
...
            "state" : "translated",
            "value" : "Modifier avant d'ajouter"
          }
        }
      }
    },
    "FINE TUNING" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "RÉGLAGES FINS"
          }
...
            "state" : "translated",
            "value" : "Testés sur du vrai matériel avec l'app : %1$@. %2$@"
          }
        }
      }
    },
    "The clock pauses only below the target range" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Le chrono se met en pause seulement sous la plage cible"
          }
...
            "state" : "translated",
            "value" : "Ajoute au moins une série avec un tirage."
          }
        }
      }
    },
    "Add to my routines" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajouter à mes routines"
          }
...
            "state" : "translated",
            "value" : "DOIGT"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminé"
          }
...
            "state" : "translated",
            "value" : "Nouveaux pics à examiner"
          }
        }
      }
    },
    "New routine" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nouvelle routine"
          }
...
            "state" : "translated",
            "value" : "s"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enregistrer"
          }
...
            "state" : "translated",
            "value" : "séries"
          }
        }
      }
    },
    "Sets" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Séries"
          }
...
